[tool.poetry]
name = "libbot"
version = "0.1.0"
description = ""
authors = ["Francis Tembo <francistembo92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.10"
rasa = "^3.5.3"
websockets = "10"
sqlalchemy = "<2.0"
openai = "^0.28.1"
langchain = "^0.0.301"
qdrant-client = "^1.7.1"
tiktoken = "^0.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
